<resources>
    <string name="app_name">TuTTracker</string>
    <string name="nav_drawer_open">open</string>
    <string name="nav_drawer_close">close</string>
    <string name="nav_sign_in">Sign in</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_share">Share</string>
    <string name="home_tab_inbox">Inbox</string>
    <string name="home_tab_outbox">Outbox</string>
    <string name="home_tab_stats">Stats</string>
    <string name="home_tab_archive">Archive</string>
    <string name="dialog_upload_select_file">Select file</string>
    <string name="dialog_upload_file_selected">File selected</string>
    <string name="dialog_upload_tutor_email">Tutor email</string>
    <string name="dialog_upload_student_email">Student email</string>
    <string name="dialog_upload_title">Title</string>
    <string name="dialog_upload_description">Description</string>
    <string name="dialog_upload_maximum_grade">Maximum grade</string>
    <string name="dialog_upload_actual_grade">Actual grade</string>
    <string name="dialog_upload_date_assigned">Date assigned</string>
    <string name="dialog_upload_date_due">Date due</string>
    <string name="dialog_upload_date_submitted">Date submitted</string>
    <string name="dialog_upload_date_graded">Date graded</string>
    <string name="dialog_upload_cancel">Cancel</string>
    <string name="dialog_upload_proceed">Proceed</string>
    <string name="dialog_upload_header_new">New assignment</string>
    <string name="dialog_upload_header_turn_in">Turn in</string>
    <string name="dialog_upload_header_grade">Grade</string>
    <string name="entry_lists_grade_separator">/</string>
    <string name="entry_lists_grade">Grade</string>
    <string name="fragment_stats_assigned"># Assigned:</string>
    <string name="fragment_stats_submitted"># Submitted:</string>
    <string name="fragment_stats_graded"># Graded:</string>
    <string name="fragment_stats_archived"># Archived:</string>
    <string name="fragment_stats_header_1">From me</string>
    <string name="fragment_stats_header_2">To me</string>
    <string name="tagline">Tutoring made easy</string>
</resources>